# nbp-rs

./: Cargo.toml  README.md  codebook.toml
deploy/: nbp.service  nbp.socket  nginx.conf
src/: lib.rs  main.rs  nbp_parser.rs
templates/: index.html
tests/: integration.rs
