[package]
name = "nbp-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
thiserror = "2"
tower = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
scraper = "0.26"
askama = "0.15.6"

[dev-dependencies]
wiremock = "0.6"
serde_json = "1"
