[package]
name = "nbp-rs"
version = "0.1.1"
edition = "2024"
publish = false
description = "HTTP-service to retrieve currency exchange rates from Narodowy Bank Polski (Tabela A)"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2" }
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
thiserror = "2"
listenfd = "1"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
scraper = "0.26"
askama = "0.15.6"

[dev-dependencies]
wiremock = "0.6"
serde_json = "1"
